--- a/iteration1/iteration1.csproj
+++ b/iteration1/iteration1.csproj
@@ -44,6 +44,8 @@
     <_ContentIncludedByDefault Remove="wwwroot\thebest\tsconfig.vitest.json" />
     <_ContentIncludedByDefault Remove="wwwroot\thebest\vite.config.ts" />
     <_ContentIncludedByDefault Remove="wwwroot\thebest\vitest.config.ts" />
+    <_ContentIncludedByDefault Remove="Pages\Index.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\Shared\_Layout.cshtml" />
   </ItemGroup>
 
 </Project>
